<resources>
    <string name="app_name">My Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nano_degree_apps">My Nano Degree Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xzy_reader">XYZ Reader</string>
    <string name="my_own_app">Capstone: My Own App</string>
    <string name="this_button">This button will launch my %1$s app!</string>
</resources>
